# activation-patching

./: .gitignore  README.md  pyproject.toml
docs/: GUIDE.md
examples/: README.md  common.py  offline_demo.py  quickstart.py
notebooks/: apple_cat_demo.ipynb
src/actpatch/: __init__.py  _logging.py  cache_ops.py  hooks.py  image_utils.py  patcher.py  specs.py
src/actpatch/adapters/: __init__.py  base.py  internvl.py  qwen2_5_vl.py
tests/: conftest.py  test_adapter_methods.py  test_adapters.py  test_cache.py  test_cache_ops.py  test_forward_pass_indices.py  test_hooks.py  test_image_utils.py  test_logging.py  test_offline.py  test_online_kv.py  test_online_residual.py  test_patcher.py  test_specs.py  tiny_model.py
tests/e2e/: _e2e_helpers.py  test_internvl_apple_cat.py  test_qwen2_5_vl_apple_cat.py
