[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actpatch"
version = "0.1.0"
description = "Activation patching for Vision-Language Models (Qwen2.5-VL, InternVL 3.5)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aquasar" }]
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.9.0",
    "pillow",
    "accelerate==1.13.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end test that loads a real VLM (opt in via ACTPATCH_RUN_E2E=1).",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), bugbear (B), pyupgrade (UP),
# comprehensions (C4). Naming (N) is intentionally omitted: this code uses
# math conventions (T, H, W, K, V) that the naming rules would flag.
select = ["E", "W", "F", "I", "B", "UP", "C4"]
